# samevariant

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs
