[package]
name = "samevariant"
version = "0.0.2"
edition = "2021"
license = "ISC"
description = "Derive enum of same-variant pairs"
homepage = "https://github.com/andrewbaxter/samevariant"
repository = "https://github.com/andrewbaxter/samevariant"
readme = "readme.md"

[lib]
proc-macro = true

[dependencies]
genemichaels = "0.2"
proc-macro2 = "1"
quote = "1"
syn = "1"
