[package]
name = "samevariant"
version = "0.0.4"
edition = "2021"
license = "ISC"
description = "Derive enum of same-variant pairs"
homepage = "https://github.com/andrewbaxter/samevariant"
repository = "https://github.com/andrewbaxter/samevariant"
readme = "readme.md"

[lib]
proc-macro = true

[dependencies]
genemichaels-lib = "0.5"
proc-macro2 = "1"
quote = "1"
syn = "2"
